fix spacing again

--- a/dropdown-menu.css
+++ b/dropdown-menu.css
@@ -65,7 +65,7 @@
     text-align: center;
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1300px) {
     .dropdown-menu {
         display: none;
     }
