--- a/general.css
+++ b/general.css
@@ -41,9 +41,9 @@ a {
     }
 }
 
-@media (min-width: 1100px) and (max-width: 1200px) {
+@media (min-width: 1100px) and (max-width: 1300px) {
     .right {
-        margin-left: clamp(18px, calc(18px + (100vw - 1100px) * 0.5), 68px);
+        margin-left: clamp(18px, calc(18px + (100vw - 1100px) * 0.5), 118px);
         margin-top: 72px;
     }
 }
