--- a/header.css
+++ b/header.css
@@ -12,7 +12,7 @@
     z-index: 2;
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1300px) {
     .top {
         display: none;
     }  
