--- a/projects/articles.css
+++ b/projects/articles.css
@@ -258,7 +258,7 @@
     }
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1300px) {
     .mini-navigation {
         top: 72px;
         left: 0px;
