--- a/projects/projects.css
+++ b/projects/projects.css
@@ -179,7 +179,7 @@
     }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1300px) {
     .project-images {
         justify-content: left;
     }
